--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.5.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
+    "@types/string-similarity": "^4.0.2",
     "git-commit-msg-linter": "^5.0.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
